/*
 * WARNING! All changes made in this file will be lost!
 * Created from 'scheme.tl' by 'mtprotoc'
 *
 *  Copyright (c) 2019-present,  NebulaChat Studio (https://nebula.chat).
 *  All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mtproto;

option java_package = "chat.nebula.chatengine.mtproto";
option java_outer_classname = "MTProto";
option optimize_for = CODE_SIZE;
// option go_package = "github.com/nebula-chat/chatengine/mtproto";

import "schema.tl.crc32.proto";


///////////////////////////////////////////////////////////////////////////////
// Bool <--
//  + TL_boolFalse
//  + TL_boolTrue
//
message Bool_Data {
}

message Bool {
    TLConstructor constructor = 1;
    Bool_Data data2 = 2;
}

// boolFalse#bc799737 = Bool;
message TL_boolFalse {
    Bool_Data data2 = 2;
}

// boolTrue#997275b5 = Bool;
message TL_boolTrue {
    Bool_Data data2 = 2;
}


///////////////////////////////////////////////////////////////////////////////
// True <--
//  + TL_true
//
message True_Data {
}

message True {
    TLConstructor constructor = 1;
    True_Data data2 = 2;
}

// true#3fedd339 = True;
message TL_true {
    True_Data data2 = 2;
}


///////////////////////////////////////////////////////////////////////////////
// Error <--
//  + TL_error
//
message Error_Data {
    int32 code = 1;
    string text = 2;
}

message Error {
    TLConstructor constructor = 1;
    Error_Data data2 = 2;
}

// error#c4b9f9bb code:int text:string = Error;
message TL_error {
    Error_Data data2 = 2;
}


///////////////////////////////////////////////////////////////////////////////
// Null <--
//  + TL_null
//
message Null_Data {
}

message Null {
    TLConstructor constructor = 1;
    Null_Data data2 = 2;
}

// null#56730bcc = Null;
message TL_null {
    Null_Data data2 = 2;
}


